Trying again, with different plugin repositories